# sentinelPi-

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: sentinelpi.yaml
docs/: CODE_REVIEW.md  DEVELOPMENT_ROADMAP.md  FEATURE_ROADMAP.md  configuration_guide.md  security_considerations.md  systemd_setup.md  threat_model.md  troubleshooting.md
scripts/: install.sh  setup_venv.sh
src/sentinelpi/: __init__.py  main.py  models.py
src/sentinelpi/alerts/: __init__.py  correlator.py  manager.py  notifiers.py  siem.py
src/sentinelpi/baseline/: __init__.py  engine.py
src/sentinelpi/capture/: __init__.py  flow_ingest.py  honeypot.py  packet_capture.py  proc_reader.py
src/sentinelpi/config/: __init__.py  manager.py  preflight.py
src/sentinelpi/detectors/: __init__.py  active_hours_detector.py  arp_detector.py  asn_detector.py  auth_log_detector.py  base.py  beacon_detector.py  connection_detector.py  dns_detector.py  doh_detector.py  geo_country_detector.py  host_profile_detector.py  lateral_movement_detector.py  port_scan_detector.py  threat_intel_detector.py
src/sentinelpi/intel/: __init__.py  threat_feeds.py
src/sentinelpi/inventory/: __init__.py  device_classifier.py  device_tracker.py  dhcp_leases.py
src/sentinelpi/responders/: __init__.py  base.py  dns_sinkhole.py  firewall.py  killswitch.py  manager.py
src/sentinelpi/storage/: database.py
src/sentinelpi/ui/: __init__.py  dashboard.py
src/sentinelpi/ui/templates/: dashboard.html  device.html  login.html
src/sentinelpi/utils/: __init__.py  asn.py  clock.py  geo.py  network.py  watchdog.py
systemd/: sentinelpi.service
tests/: conftest.py  test_active_hours.py  test_alert_manager.py  test_arp_detector.py  test_asn_detector.py  test_baseline.py  test_baseline_persistence.py  test_beacon_detector.py  test_capture_modes.py  test_clock.py  test_cluster.py  test_config_validation.py  test_connection_detector.py  test_correlator.py  test_dashboard_auth.py  test_dashboard_render.py  test_dashboard_server.py  test_db_migrations.py  test_detector_concurrency.py  test_device_classifier.py  test_dhcp_leases.py  test_dns_detector.py  test_dns_sinkhole.py  test_doh_detector.py  test_flow_ingest.py  test_geo_country_detector.py  test_honeypot.py  test_host_profile.py  test_host_profile_wiring.py  test_killswitch.py  test_memory_bounding.py  test_notifiers.py  test_per_sensor.py  test_polish_fixes.py  test_preflight_environment.py  test_responders.py  test_response_api.py  test_siem.py  test_threat_intel.py  test_watchdog.py  (+1 more)
tests/fixtures/: sample_data.py
