[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelpi"
version = "1.0.0"
description = "Lightweight defensive network anomaly monitor for Raspberry Pi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SentinelPi Project"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "scapy>=2.5.0,<3.0",
    "psutil>=5.9.0,<6.0",
    "flask>=3.0.0,<4.0",
    "waitress>=3.0.0,<4.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.31.0,<3.0",
    "python-dateutil>=2.8.0,<3.0",
]

[project.optional-dependencies]
geo = ["maxminddb>=2.4.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.0",
    "mypy>=1.11",
    "types-requests",
    "types-PyYAML",
    "types-psutil",
    "types-python-dateutil",
]

[project.scripts]
sentinelpi = "sentinelpi.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the dashboard HTML templates inside the wheel; without this they are
# left out (only .py modules are packaged) and the installed dashboard 500s.
"sentinelpi.ui" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F841"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
# Start pragmatic: type the code we wrote, don't yet demand full annotations on
# every function. Tighten incrementally (disallow_untyped_defs, etc.) later.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# Third-party libraries without type information (C extensions / no stubs).
[[tool.mypy.overrides]]
module = ["scapy.*", "waitress.*", "maxminddb.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["sentinelpi"]

[tool.coverage.report]
# Coverage gate: fail a coverage run (CI, or local `pytest --cov`) below this
# floor so the test investment can't silently erode. Set a few points under the
# current measured total (~74%) to absorb run-to-run variance; ratchet upward as
# coverage improves. Has no effect on a plain `pytest` run (no report generated).
fail_under = 70
show_missing = true
precision = 1
